
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [API_PARSER] [CROWDSTRIKE] Add identities to fetched information
### Fixed
- [LOG_FORMAT] [HAPROXY] Use correct log-format field for haproxy HTTP path only


## [2.30.0]
### Added
- [LOG_FORWARDER] [SENTINEL] Add new Log Forwarder to Vulture GUI
### Fixed
- [API_PARSER] [GATEWATCHER_ALERTS] Reduce the page size to 10 to avoid timeout errors
- [PF] [CONF] Add missing CARP rule to allow inter-cluster broadcasting and enable correct MASTER/BACKUP switch
- [NET] [CARP] Correctly clean system configurations when removing some interface(s) from an existing CARP conf
- [NET] [CARP] Correctly use existing carp password and priorities for added interface(s) on an existing CARP conf


## [2.29.1] - 2025-08-22
### Added
- [RSYSLOG] add mmutf8fix to default loaded modules
### Fixed
- [PORTAL] [HAPROXY] Only set X-Forwarded-Proto header if it doesn't already exist in request
- [LOGFWD] [KAFKA] Correctly use key value for templating


## [2.29.0] - 2025-08-01
### Changed
- [API_PARSER] [SENTINEL_ONE_IDENTITY_GRAPH] rename to Sentinel One Graph
- [API_PARSER] [SENTINEL_ONE_GRAPH] Filter events with detectionSource.product
- [API_PARSER] [SENTINEL_ONE_GRAPH] Various log formatting improvements
### Added
- [API_PARSER] [SENTINEL_ONE_GRAPH] Get more fields from alert details
### Fixed
- [PORTAL] [HAPROXY] Only set X-Forwarded-Proto header if it doesn't already exist in request


## [2.28.2] - 2025-07-28
### Fixed
- [PORTAL] Ensure Haproxy configurations are up to date on Portal changes


## [2.28.1] - 2025-07-11
### Fixed
- [API] [X509CERTIFICATE] AssertionError on non-existent certificate
- [MIGRATIONS] Set missing default values for complex fields in Frontends
- [API_PARSER] [CISCO_MERAKI] Correctly set and save timestamp after log collection