@@ -1,0 +1,67 @@
+#!/home/vlt-os/env/bin/python
+
+"""This file is part of Vulture 4.
+
+Vulture 4 is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+Vulture 4 is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with Vulture 4.  If not, see http://www.gnu.org/licenses/.
+"""
+__author__ = "Theo Bertin"
+__credits__ = []
+__license__ = "GPLv3"
+__version__ = "4.0.0"
+__maintainer__ = "Vulture Project"
+__email__ = "contact@vultureproject.org"
+__doc__ = "Reload main Rsyslog configuration"
+
+import sys
+import os
+
+# Django setup part
+sys.path.append('/home/vlt-os/vulture_os')
+os.environ.setdefault("DJANGO_SETTINGS_MODULE", 'vulture_os.settings')
+
+import django
+django.setup()
+
+from django.db.models import Q
+from system.cluster.models import Cluster
+from authentication.openid.models import OpenIDRepository
+from workflow.models import Workflow
+
+if not Cluster.is_node_bootstrapped():
+    sys.exit(0)
+
+if __name__ == "__main__":
+
+    node = Cluster.get_current_node()
+    if not node:
+        print("Current node not found. Maybe the cluster has not been initialised yet.")
+    else:
+        try:
+            reload_haproxy = False
+            print("Rewriting OpenID repos' JWT cert files...")
+            for repository in OpenIDRepository.objects.filter(enable_jwt=True):
+                print(f"Rewriting {repository.name} JWT certs...")
+                repository.write_jwt_certificate()
+                for workflow in Workflow.objects.filter(authentication__repositories=repository):
+                    reload_haproxy = True
+                    print(f"Reloading Workflow configuration {workflow.name}...")
+                    node.api_request("workflow.workflow.build_conf", workflow.pk)
+            if reload_haproxy:
+                print("Reloading Haproxy service...")
+                node.api_request("services.haproxy.haproxy.reload_service")
+        except Exception as e:
+            print(f"Failed to reload configuration: {e}")
+            print("Please relaunch this script after solving the issue.")
+
+        print("Done.")
